# fontconvert

./: .gitignore  README.md  pyproject.toml
glyphs/: manifest.yaml
src/fontconvert/: ASCII_MAPPING.tsv  bitmap.py  build.py  cli.py  manifest.py
src/fontconvert.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
